chore: Change appointment status
