# openapi.yaml
@@ -304,12 +304,31 @@ paths:
       tags:
       - appointment
       summary: Appointment List
-      description: "\uC57D\uC18D list"
+      description: "\uC57D\uC18D list\n\n            [\uC0AD\uC81C \uC57D\uC18D\uC740\
+        \ \uBCF4\uC774\uC9C0 \uC54A\uC74C]\n\n            \uC815\uB82C \uC21C\uC11C\
+        : \uBBF8\uD655\uC815 / \uD655\uC815 \uC21C\uC11C\uB300\uB85C\n\n         \
+        \   \uC644\uB8CC \uAE30\uC900: time (\uD655\uC815\uC2DC\uAC04) \uAE30\uC900\
+        \ \uC624\uB298 \uC774\uC804 \uB0A0\uC9DC[KST]\n\n            [\uBBF8\uD655\
+        \uC815]: created_at \uAE30\uC900 \uAC00\uC7A5 \uCD5C\uADFC\uC5D0 \uB9CC\uB4E0\
+        \ \uC57D\uC18D\uC774 \uB9E8\uC704\uB85C\n\n            [\uD655\uC815]: time\
+        \ (\uD655\uC815\uC2DC\uAC04) \uAE30\uC900 \uC784\uBC15\uD55C \uC57D\uC18D\uBD80\
+        \uD130\n\n            [\uC644\uB8CC]: time (\uD655\uC815\uC2DC\uAC04) \uAE30\
+        \uC900 \uB9C8\uC9C0\uB9C9\uC5D0 \uC218\uD589\uD55C \uC57D\uC18D\uBD80\uD130"
       operationId: appointment_list_appointment_list_get
       security:
       - AccessToken: []
       - RefreshToken: []
       parameters:
+      - name: type
+        in: query
+        required: true
+        schema:
+          enum:
+          - draft
+          - confirm
+          - past
+          type: string
+          title: Type
       - name: page
         in: query
         required: false
@@ -1078,8 +1097,9 @@ components:
         status:
           type: string
           enum:
-          - PROGRESS
+          - DRAFT
           - CONFIRM
+          - CANCEL
           title: Status
           description: "\uC57D\uC18D \uC0C1\uD0DC"
         time:
@@ -1163,18 +1183,12 @@ components:
           - - "\uD648\uD30C\uD2F0"
             - "\uC220"
             - "\uACE0\uAE30!"
-        deadline:
-          type: string
-          format: date-time
-          title: Deadline
-          description: "\uB9C8\uAC10\uC2DC\uAC04"
       type: object
       required:
       - title
       - description
       - location
       - keywordList
-      - deadline
       title: AppointmentAddRQ
     AppointmentEditRQ:
       properties:
@@ -1263,8 +1277,9 @@ components:
         status:
           type: string
           enum:
-          - PROGRESS
+          - DRAFT
           - CONFIRM
+          - CANCEL
           title: Status
           description: "\uC57D\uC18D \uC0C1\uD0DC"
         time:
