# openapi/service/appointment/response.py
@@ -1,8 +1,7 @@
 from datetime import datetime
-from typing import Literal
 from uuid import UUID
 
-from dto.common import Appointment
+from dto.common import Appointment, AppointmentStatus
 from pydantic import BaseModel, Field
 
 
@@ -15,7 +14,7 @@ class AbstractAppointment(BaseModel):
     title: str = Field(description="약속 이름")
     locaction: str = Field(description="간략한 장소 정보")
     headcount: int = Field(description="참가하는 인원 수")
-    status: Literal["PROGRESS", "CONFIRM"] = Field(description="약속 상태")
+    status: AppointmentStatus = Field(description="약속 상태")
     time: datetime | None = Field(description="확정 시간, 확정시에만 나옴")
 
 
